Fixing projects whitespace

--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -53,14 +53,18 @@
     padding: 1rem;
 
     /* display: flex; */
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    /* display: grid;
+    grid-template-columns: repeat(3, 1fr); */
     /* grid-template-rows: repeat(2, 1fr); */
-    place-items: center;
-    /* gap: 1rem; */
+    /* place-items: center;
+    gap: 1rem; */
+
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
 }
 /* Responsive */
-@media screen and (max-width: 1435px) {
+/* @media screen and (max-width: 1435px) {
     .projects{
         grid-template-columns: repeat(2, 1fr);
     }
@@ -70,4 +74,4 @@
         grid-template-columns: repeat(1, 1fr);
         gap: 1.5rem;
     }
-}
+} */
